@@ -598,6 +598,16 @@ lavt_set_balloon_color (lua_State * L)
   return 0;
 }
 
+/* set balloon mode */
+static int
+lavt_set_balloon_mode (lua_State * L)
+{
+  const char *const balloon_modes[] = { "say", "think", "separate", NULL };
+  avt_set_balloon_mode (luaL_checkoption (L, 1, "say", balloon_modes));
+
+  return 0;
+}
+
 /* show cursor (true or false) */
 static int
 lavt_activate_cursor (lua_State * L)
@@ -2258,6 +2268,7 @@ static const luaL_Reg akfavtlib[] = {
   {"set_balloon_width", lavt_set_balloon_width},
   {"set_balloon_height", lavt_set_balloon_height},
   {"set_balloon_color", lavt_set_balloon_color},
+  {"set_balloon_mode", lavt_set_balloon_mode},
   {"set_background_color", lavt_set_background_color},
   {"set_text_color", lavt_set_text_color},
   {"set_text_background_color", lavt_set_text_background_color},
